# md-editor

./: .gitignore  .oxlintrc.json  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.claude/: CLAUDE.md
.github/workflows/: build-macos.yml  build-site.yml  ci.yml  release-macos.yml
.vercel/: project.json
apps/desktop/: index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md  llama-server-aarch64-apple-darwin
apps/desktop/src-tauri/binaries/llama-runtime-macos-arm64/: libggml-base.0.dylib  libggml-blas.0.15.2.dylib  libggml-cpu.dylib  libggml-metal.0.dylib  libggml-rpc.dylib  libggml.0.dylib  libllama-batched-bench-impl.dylib  libllama-bench-impl.dylib  libllama-cli-impl.dylib  libllama-completion-impl.dylib  libllama-fit-params-impl.dylib  libllama-perplexity-impl.dylib  libllama-quantize-impl.dylib  libllama.0.dylib  libmtmd.0.0.9789.dylib
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_menu.rs  file_commands.rs  lib.rs  local_ai_completion.rs  local_ai_model.rs  local_ai_runtime.rs  main.rs  platform_contract.rs  recent_files.rs  save_runtime.rs  settings.rs  settings_window.rs  text_substitutions.rs  window_chrome.rs
docs/: index.md
docs/agent/: DESIGN.md  build_macos_workflow_public_repo_backup.md  hooks-migration-to-editor-core.md  index.md  markdown_editor_communication_record.md  markdown_editor_m0_spike_findings.md  markdown_editor_requirements.md  (+7 more)
scripts/: smoke-editor-core.mjs
site/: next.config.ts  package.json  tsconfig.json
(+204 files in other folders)
