[package]
name = "md-editor"
version = "0.2.4"
description = "Daily-usable Markdown and MDX-compatible desktop editor."
authors = ["md-editor contributors"]
edition = "2021"
rust-version = "1.77"
default-run = "md-editor"

[lib]
name = "md_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "md-editor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "=0.3.44"
dirs = "5"
