[package]
name = "md-editor"
version = "0.3.16"
description = "Daily-usable Markdown and MDX-compatible desktop editor."
authors = ["md-editor contributors"]
edition = "2021"
rust-version = "1.77.2"
default-run = "md-editor"

[lib]
name = "md_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "md-editor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "=0.3.44"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSButton", "NSControl", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3", features = ["block2", "NSGeometry", "NSNotification", "NSOperation", "NSString", "NSUserDefaults"] }
